<resources>
    <string name="app_name">AlarmClockBasedOnWeather</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time">Time</string>
    <string name="of_alarms"># of Alarms</string>
    <string name="temp">temp</string>
    <string name="home">Home</string>
    <string name="sound">Sound</string>
    <string name="alarm">Alarm</string>
    <string name="image">image</string>
    <string name="tone">Tone</string>
    <string name="enter_time">Enter Time</string>
    <string name="am_or_pm">Am or Pm</string>
    <string name="none">none</string>
    <string name="tempurature">Tempurature</string>
    <string name="weather">Weather</string>
    <string name="temperature">temperature</string>
    <string name="percipitation">percipitation</string>
</resources>
