<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/mainContainer"
    android:background="@drawable/background">

    
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/tabLayout"
        />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMaxWidth="0dp"
        app:tabGravity="fill"
        app:tabMode="fixed"
        app:tabBackground="@color/colorPrimary"
        app:tabIndicatorColor="?colorPrimary"
        android:layout_alignParentBottom="true">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_home_black_24dp"
            android:text="@string/home"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_surround_sound_black_24dp"
            android:text="@string/sound"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_add_alarm_black_24dp"
            android:text="@string/alarm"/>

    </com.google.android.material.tabs.TabLayout>


    <ProgressBar
        android:layout_width="wrap_content"
        android:id="@+id/loader"
        android:visibility="gone"
        android:layout_height="wrap_content">
    </ProgressBar>
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/errorText"
        android:text="Something went wrong"
        android:visibility="gone"
        android:layout_height="wrap_content">
    </TextView>

</RelativeLayout>