<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    tools:context=".AlarmFragment">

    <RelativeLayout
        android:id="@+id/relative_Layout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPagerSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tabSecondLayout" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabSecondLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_none"
                android:text="@string/none" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:icon="@drawable/ic_temppp"
                android:text="@string/temperature" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/ic_snow"
                android:text="@string/weather" />

        </com.google.android.material.tabs.TabLayout>

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:id="@+id/timePicker"
            android:layout_marginTop="150dp"
            android:timePickerMode="spinner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="#090"
            android:textStyle="bold"
            android:layout_marginTop="100dp"
            android:id="@+id/timeTextView"
            android:text="Time: "
            />

        <Button
            android:id="@+id/button"
            android:layout_width="186dp"
            android:layout_height="55dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="124dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="202dp"
            android:text="SET ALARM" />

    </RelativeLayout>

</FrameLayout>